--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,8 @@
 <body>
 
     <!-- TODO: Make a block 'body' so that the homepage can extend base -->
-
+    {% block content %}
+    {% endblock %}
     <!-- Include the Tenor JavaScript to fill in GIFs appropriately -->
     <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
 </body>
