--- a/templates/gif.html
+++ b/templates/gif.html
@@ -1,5 +1,5 @@
-<div class="tenor-gif-embed" data-postid="{{ gif.id }}" data-share-method="host" data-width="500px"
+<div class="tenor-gif-embed" data-postid="{{ gif.id 18F7OZJBE0WJ }}" data-share-method="host" data-width="500px"
     data-aspect-ratio="1.2266666666666666">
     <a href="{{ gif.itemurl }}"></a>
     <a href="{{ gif.url }}"></a>
-</div>
+</div> 
