--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,12 @@
 
 <!-- TODO: Make an HTML form containing a search box and a submit button to add
     the search term to the query string -->
+<form action = '/gif'>
+    <h1>
+        Hello World
+    </h1>
 
+</form>
 <!-- TODO: Make a for loop to loop over GIFs passed in from the server -->
 
 <!-- TODO: For each gif, include the 'gif.html' template to display it -->
