--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
 <body>
 
     <!-- TODO: Make a block 'body' so that the homepage can extend base -->
+    <!-- block body content label (extends base) -->
     {% block content %}
     {% endblock %}
     <!-- Include the Tenor JavaScript to fill in GIFs appropriately -->
