--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-    Enter Your Info
+    Gif Search
 {% endblock %}
 
 {% block content %}
@@ -14,7 +14,7 @@
         Search GIFs
         <input
     </p>
-    <button type="submit">Search</button>
+    <button type="submit">Search</button> <!-- creates a button called Search -->
 
 </form>
 <!-- TODO: Make a for loop to loop over GIFs passed in from the server -->
