--- a/templates/gif.html
+++ b/templates/gif.html
@@ -1,4 +1,6 @@
-<div class="tenor-gif-embed" data-postid="{{ gif.id 18F7OZJBE0WJ }}" data-share-method="host" data-width="500px"
+<!-- templates/gif.html -->
+<!-- NOTE TO STUDENTS: DO NOT MODIFY THIS CODE. Instead, include it as-is in your 'index' template to show each gif. -->
+<div class="tenor-gif-embed" data-postid="{{ gif.id }}" data-share-method="host" data-width="500px"
     data-aspect-ratio="1.2266666666666666">
     <a href="{{ gif.itemurl }}"></a>
     <a href="{{ gif.url }}"></a>
