Added CSS styling to Search Gifs

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,9 +10,15 @@
     the search term to the query string -->
 
 <form action='/gif'>
-    <p>
+    <p> <!--CSS styling for the Page title-->
         Search GIFs
-        <input
+        <input [type=text] {
+            padding: 20px;
+            font-size: 17px;
+            float: middle;
+            width: 70%;
+            background: #FFFF00;
+        }/>
     </p>
     <button type="submit">Search</button> <!-- creates a button called Search -->
 
