--- a/templates/index.html
+++ b/templates/index.html
@@ -10,15 +10,8 @@
     the search term to the query string -->
 
 <form action='/gif'>
-    <p> <!--CSS styling for the Page title-->
+    <p style="color:green", style= "font-size:50px;"> <!--CSS styling for the Page title-->
         Search GIFs
-        <input [type=text] {
-            padding: 20px;
-            font-size: 17px;
-            float: middle;
-            width: 70%;
-            background: #FFFF00;
-        }/>
     </p>
     <button type="submit">Search</button> <!-- creates a button called Search -->
 
