--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
 <form action='/gif'>
     <p>
         Search GIFs
+        <input type="text"placeholder="Search..">
     </p>
     <button type="submit">Search</button> <!-- creates a button called Search -->
 
