moved search button

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,13 +7,12 @@
 <!-- TODO: Make an HTML form containing a search box and a submit button to add
     the search term to the query string -->
 
-<form action='/gif'>
+<form action='/gifs'>
     <p>
         Search GIFs
         <input type="text"placeholder="Search..">
+        <button type="submit">Search</button> <!-- creates a button called Search -->
     </p>
-    <button type="submit">Search</button> <!-- creates a button called Search -->
-
 </form>
 <!-- TODO: Make a for loop to loop over GIFs passed in from the server -->
 
