created route for /gifs

--- a/templates/gifs.html
+++ b/templates/gifs.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} <!-- extending base; now override we can override the content block on our child templates -->
 
 {% block title %}
-    Hello World
+    Here are your gifs
 {% endblock %}
 
 
