--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 <!-- TODO: Make an HTML form containing a search box and a submit button to add
     the search term to the query string -->
 
-<form action='/gif'>
+<form action='/gifs'>
     <p>
         Search GIFs
     </p>
