--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 <!-- TODO: Extend 'base.html' and put content into a block 'body' to match -->
 {% block title %}
-    Gif Search
+    GIF Search <!-- creates a title -->
 {% endblock %}
 
 {% block content %}
@@ -10,7 +10,7 @@
 <form action='/gifs'>
     <p>
         Search GIFs
-        <input type="text"placeholder="Search..">
+        <input type="text"placeholder="Search.."><!-- creates a search bar -->
         <button type="submit">Search</button> <!-- creates a button called Search -->
     </p>
 </form>
