[gif FINALLY WORKINGGGGgit add .git add .git add .git add .1]

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,8 +17,9 @@
 <!-- TODO: Make a for loop to loop over GIFs passed in from the server -->
 
 <!-- TODO: For each gif, include the 'gif.html' template to display it -->
-{% for gifs in top_10gifs %}
+<!-- {% for gifs in top_10gifs %}
     {% include 'gif.html' %}
-{% endfor %}
+{% endfor %} -->
+<img src="{{gif_str}}" alt="OKOKKOKOKOK">
 
 {% endblock %}
