added link to style.css in index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 {% block title %}
     GIF Search <!-- creates a title -->
 {% endblock %}
-
+<link rel="stylesheet"href="{{ url_for('static',filename='style.css') }}">
 {% block content %}
 <!-- TODO: Make an HTML form containing a search box and a submit button to add
     the search term to the query string -->
