--- a/static/style.css
+++ b/static/style.css
@@ -1,13 +1,26 @@
-<style>
 body {
     background-color: green;
 }
 h1 {
     color: purple;
+    font-family: 'Times New Roman', Times, serif
+    text-align: center;
 }
 p {
     color: salmon;
-    font-family: Arial, Helvetica, sans-serif 
+    font-family: 'Times New Roman', Times, serif 
+}
+.search-box{
+    background-image: blue;
+    height: 20px;
+    padding: 1em;
 
 }
-</style>
+.search-button{
+    color:
+    float:
+    width:
+    height:
+
+
+}
