--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,15 @@
 <!-- TODO: Extend 'base.html' and put content into a block 'body' to match -->
-<!--{% extends 'base.html' %}--> 
+{% block title %}
+<h1><!--title for the GIF Search-->
+    GIF Search
+</h1>
+{% endblock %}
 <link rel="stylesheet"href="{{ url_for('static',filename='style.css') }}">
 {% block content %}
 <!-- TODO: Make an HTML form containing a search box and a submit button to add
     the search term to the query string -->
 
 <form action='/gifs'> <!--allows for the HTML form to be created-->
-    <h1><!--title for the GIF Search-->
-        GIF Search
-    </h1>
     <p>
         Search GIFs
     </p>  
