--- a/templates/index.html
+++ b/templates/index.html
@@ -4,11 +4,10 @@
     GIF Search
 </h1>
 {% endblock %}
-<link rel="stylesheet"href="{{ url_for('static',filename='style.css') }}">
 {% block content %}
 <!-- TODO: Make an HTML form containing a search box and a submit button to add
     the search term to the query string -->
-
+    <link rel="stylesheet"href="{{ url_for('static',filename='style.css') }}">
 <form action='/gifs'> <!--allows for the HTML form to be created-->
     <p>
         Search GIFs
@@ -20,9 +19,9 @@
 <!-- TODO: Make a for loop to loop over GIFs passed in from the server -->
 
 <!-- TODO: For each gif, include the 'gif.html' template to display it -->
-<!-- {% for gifs in gifs %}
-    {% include 'gif.html' %}
-{% endfor %} -->
+    {% for gifs in gifs %}
+        {% include 'gif.html' %}
+    {% endfor %}
 <img src="{{gif_str}}" alt="OKOKKOKOKOK"> <!--shows the gif image-->
 
 {% endblock %}
