added more to error statement

--- a/templates/index.html
+++ b/templates/index.html
@@ -27,6 +27,6 @@
 {% endfor %}
 <img src="{{gif_str}}" alt="OKOKKOKOKOK"> <!--shows the gif image-->
 {% if gifs|length == 0 %}
-    <h1>No GIFs could be found.</h1>
+    <h1>No GIFs could be found. Try another search query.</h1>
 {% endif %}
 {% endblock %}
