--- a/templates/index.html
+++ b/templates/index.html
@@ -10,11 +10,10 @@
 <link rel="stylesheet"href="{{ url_for('static',filename='style.css') }}">
 <!-- TODO: Make an HTML form containing a search box and a submit button to add
     the search term to the query string -->
-
-<form action='/gifs'> <!--allows for the HTML form to be created-->
     <p>
         Search GIFs
     </p>  
+<form action='/gifs'> <!--allows for the HTML form to be created--> 
     <input name ="query" type="query"placeholder="Search GIFs.."><!-- creates a search bar -->
     <button type="submit">Search</button> <!-- creates a button called Search -->
 
@@ -26,7 +25,7 @@
     {% include 'gif.html' %}
 {% endfor %}
 <img src="{{gif_str}}" alt="OKOKKOKOKOK"> <!--shows the gif image-->
-{% if gifs|length == 0 %}
+{% if gifs != query %} <!--if the gifs aren't in search query, print taht it can' be shown and to try another search.-->
     <h1>No GIFs could be found. Try another search query.</h1>
 {% endif %}
 {% endblock %}
