fixed a weird results bug

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,14 +13,17 @@
 <form action='/'> <!--allows for the HTML form to be created--> 
     <p>
         Search how many GIFs?
-    <select name="limit"> <!-- drop down called "limit" -->
+    <select name="search_limit"> <!-- drop down called "limit" -->
         <option value=1>1</option> <!-- left 1 is the actual data that will get passed, and 1 is what gets displayed -->
+        <option value=2>2</option>
         <option value=3>3</option>
+        <option value=4>4</option>
         <option value=5>5</option>
+        <option value=6>6</option>
+        <option value=7>7</option>
+        <option value=8>8</option>
+        <option value=9>9</option>
         <option value=10 selected = "selected" >10</option> <!-- default selected is 10 -->
-        <option value=20>20</option>
-        <option value=30>30</option>
-        <option value=50>50</option>
     </select>
     </p>  
 
@@ -39,5 +42,5 @@
 {% endfor %}
 
     <h1>No GIFs could be found. Try another search query.</h1>
-{% endif %}
+
 {% endblock %}
