--- a/static/style.css
+++ b/static/style.css
@@ -9,25 +9,34 @@ body {
 }
 /*CSS styling for the title text*/
 h1 {
-    color: purple;/*title text color*/
-    font-family: 'Times New Roman', Times, serif;/**/
+    color: rgb(254, 0, 42);/*title text color*/
+    font-family: 'Times New Roman', Times, serif;/*text font*/
     text-align: center;/*position of the title on the page*/
 }
 /*CSS styling for the printed text "GIF Search*/
 p {
-    color: darkred;/*text color*/
+    color: rgb(94, 255, 0);/*text color*/
     font-family: 'Times New Roman', Times, serif;/*text font*/
     text-align: center;/*positon of the "GIF search" text on the page*/
 }
 /*CSS styling for the search box*/
-.box{
+.search-box{
     background-image: blue;/*search box background color*/
-    text-align: center;/*position of search box on the page*/
+    align-content: center;/*position of search box on the page*/
 }
 /*CSS styling for the search button*/
-.button{
-    color: seagreen;/*search button background color*/
-    text-align: center;/*position of the search button on the page*/
+.search-button{
+    color: rgb(251, 255, 0);/*search button background color*/
+    align-content: center;/*position of the search button on the page*/
     cursor: pointer;/*cursor changes how it looks when it is hovering over the button*/
-
+}
+.grid{
+    display: grid;
+    grid-template-columns: auto;
+}
+.tenor-gif {
+    margin: auto;
+    width: 250px;
+    height: 250px;
+    align-content: center;
 }
