changed coding of button & search bar in CSS

--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
         </select>
         </p>  
 
-        <input name ="search_result" value = "{{search_result}}" type="query"placeholder="Search GIFs.."><!-- creates a search bar -->
+        <input type="text" name ="search_result" value = "{{search_result}}" placeholder="Search GIFs.."><!-- creates a search bar -->
         <button type="submit">Search</button> <!-- creates a button called Search -->
     </form>
 
