--- a/static/style.css
+++ b/static/style.css
@@ -20,12 +20,12 @@ p {
     text-align: center;/*positon of the "GIF search" text on the page*/
 }
 /*CSS styling for the search box*/
-.search-box{
+form.input[type=text] {
     background-image: blue;/*search box background color*/
     align-content: center;/*position of search box on the page*/
 }
 /*CSS styling for the search button*/
-.search-button{
+form.search button[type=submit] {
     color: rgb(251, 255, 0);/*search button background color*/
     align-content: center;/*position of the search button on the page*/
     cursor: pointer;/*cursor changes how it looks when it is hovering over the button*/
