--- a/static/style.css
+++ b/static/style.css
@@ -10,33 +10,36 @@ body {
 /*CSS styling for the title text*/
 h1 {
     color: rgb(254, 0, 42);/*title text color*/
+    font-size: 50px;
     font-family: 'Times New Roman', Times, serif;/*text font*/
     text-align: center;/*position of the title on the page*/
 
 }
 h2 {
     color: rgb(254, 0, 220);/*title text color*/
+    font-size: 24px;
     font-family: 'Times New Roman', Times, serif;/*text font*/
     text-align: center;/*position of the title on the page*/ 
 }
+
 /*CSS styling for the printed text "GIF Search*/
 p {
     color: rgb(94, 255, 0);/*text color*/
+    font-size: 20px;
     font-family: 'Times New Roman', Times, serif;/*text font*/
     text-align: center;/*positon of the "GIF search" text on the page*/
 
 }
 /*CSS styling for the search box*/
-form.input[type=text] {
-    background: blue;/*search box background color*/
-    align-items: center;/*position of search box on the page*/
+input {
+    font-size: 18px;
+    text-align: center;/*position of search box on the page*/
 
 }
 /*CSS styling for the search button*/
-form.button[type=submit] {
-    background: rgb(251, 255, 0);/*search button background color*/
-    align-items: center;/*position of the search button on the page*/
-    cursor: pointer;/*cursor changes how it looks when it is hovering over the button*/
+button {
+    font-size: 18px;
+    text-align: center;/*position of the search button on the page*/
 
 }
 .grid{
