--- a/static/style.css
+++ b/static/style.css
@@ -44,6 +44,9 @@ button {
     text-align: center;/*position of the text in the search button*/
 
 }
-li {
-    display: table-column;
+.tenor-gif-embed {
+    margin: auto;
+    width: 500px;
+    height: 500px;
+    align-content: center;
 }
